base/src/test/resources/failure/syntax/issue293.aya.txt
In file $FILE:7:37 ->

  5 |   | 我们
  6 |   | 他们
  7 | def 测测测测测测测测测 : 单人代词 => 我们
                                           ^-^

Error: Expected type: 单人代词
       Normalized: 单人代词
       Actual type: 多人代词
       Normalized: 多人代词
       They don't match, sorry
What are you doing?
